@@ -1,4 +1,5 @@
 Simplify ignore logic + disallow ignoring chatters with higher status
+Delete messages based on public message limit, no buffer for private ones needed
 
 Version 1.20.5 - Jul. 19, 2016
 Check permission before selectively deleting a message.
